--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@heroicons/react": "^2.2.0",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
