--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "validator": "^13.15.15",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/validator": "^13.15.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
