--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prisma": "^6.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "twilio": "^5.10.3",
     "validator": "^13.15.15",
     "zod": "^4.1.11"
   },
