--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "@types/validator": "^13.15.3",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
